# huggingface-datasets

./: README.md  dataset.py  pyproject.toml  stadsarkiv_dataset.py
