[project]
name = "dataset"
version = "0.1.0"
description = ""
authors = [{ name = "Matteo Campinoti", email = "matteo.campinoti94@gmail.com" }]
requires-python = "~=3.9"
readme = "README.md"
dependencies = [
    "xmltodict>=0.14.0,<0.15",
    "huggingface-hub>=0.25.1,<0.26",
    "datasets>=3.0.1,<4",
    "pillow>=10.4.0,<11",
    "pandas>=2.2.3,<3",
    "click>=8.1.7,<9",
]

[project.scripts]
transkribus-dataset = "dataset:app_transkribus"

[dependency-groups]
dev = [
    "black>=24.4.2,<25",
    "types-click>=7.1.8,<8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
